Added code to search batches

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -315,8 +315,6 @@
     </a>
 </div>
 
-<div class="content" role="main">
-
-  <div class="card-container">
+<main class="content col-md-24">
     <router-outlet></router-outlet>
-  </div>
+</main>
