--- a/angular/src/app/view/testing-detection/testing-detection.component.html
+++ b/angular/src/app/view/testing-detection/testing-detection.component.html
@@ -1,55 +1,128 @@
-<div class="row">
+<div class="component">
         <mat-tab-group id="detectionGroup" animationDuration="0ms" [selectedIndex]="selectedIndex">
             <!-- Editing a location -->
             <mat-tab label="Edit">
                 <div class="col">
                     <form #saveForm="ngForm" (ngSubmit)="saveDetectionBatch()">
-                        <div class="row">
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Batch Id</mat-label>
-                                <input matInput
-                                   [(ngModel)]="detectionBatch.batchId" name="batchId" id = "batchId" #batchId="ngModel" required="true">
-                            </mat-form-field>
-                        </div>
-                        <div class="form-group">          
-                            <mat-form-field>
-                                <mat-label>Lab</mat-label>
-                                <mat-select [(value)]="detectionBatch.lab">
-                                    <mat-option value="None"></mat-option>
-                                    <mat-option *ngFor="let location of locations" [value]="location">
-                                                {{location.name}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                        </div>
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Detection Datetime</mat-label>
-                                 
-                                <input matInput disabled = "true"
-                                    [(ngModel)]="detectionBatch.detectionDateTime" 
-                                    name="detectionDateTime" id = "detectionDateTime" 
-                                    #detectionDateTime="ngModel" required="true">                                
-                            </mat-form-field>
-                            <button class="btn btn-success" (click)="now()">now</button>
-                        </div>
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Detection Personnel</mat-label>
-                                <input matInput  disabled = "true"
-                                    [(ngModel)]="detectionBatch.detectionPersonnel" 
-                                    name="detectionPersonnel" id = "detectionPersonnel" 
-                                    #detectionPersonnel="ngModel" required="false">
-                            </mat-form-field>
-                        </div>
+                        
                         <div class="row">  
                             <div class="form-group">  
                                 <button class="btn btn-success" [disabled]="saveForm.invalid">Save</button>
                             </div>
                             <div class="form-group">  
                                 <button type="button" class="btn btn-success" (click)="newDetectionBatch()">New</button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group">
+                                <mat-form-field>
+                                    <mat-label>Batch Id</mat-label>
+                                    <input matInput
+                                    [(ngModel)]="detectionBatch.batchId" name="batchId" id = "batchId" #batchId="ngModel" required="true">
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group">          
+                                <mat-form-field>
+                                    <mat-label>Lab</mat-label>
+                                    <mat-select required="true" [formControl]="labControl">
+                                        <mat-option value="new LocationVO()" selected></mat-option>
+                                        <mat-option *ngFor="let lab of locations" [value]="lab.code">
+                                            {{lab.name}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="row">  
+                            <div class="form-group">
+                                <mat-form-field>
+                                    <mat-label>Detection Personnel</mat-label>
+                                    <input matInput  disabled = "true"
+                                        [(ngModel)]="detectionBatch.detectionPersonnel" 
+                                        name="detectionPersonnel" id = "detectionPersonnel" 
+                                        #detectionPersonnel="ngModel" required="false">
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group">
+                                <mat-form-field>
+                                    <mat-label>Detection Datetime</mat-label>
+                                    
+                                    <input matInput disabled = "true"
+                                        [(ngModel)]="detectionBatch.detectionDateTime" 
+                                        name="detectionDateTime" id = "detectionDateTime" 
+                                        #detectionDateTime="ngModel" required="true">                                
+                                </mat-form-field>
+                                <button class="btn btn-success" (click)="now()">now</button>
+                            </div>
+                        </div>
+                        <div class="row"> 
+                            <div class="form-group">          
+                                <mat-form-field>
+                                    <mat-label>Instrument</mat-label>
+                                    <mat-select [formControl]="instrumentControl" required="true">
+                                        <mat-option value="new Instrument('', '')" selected></mat-option>  
+                                        <mat-option *ngFor="let instrument of instruments" [value]="instrument.code">
+                                            {{ instrument.name }}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group">
+                                <mat-form-field>
+                                    <mat-label>Batch Size</mat-label>
+                                    <input matInput
+                                        [(ngModel)]="detectionBatch.detectionBatch1.instrumentBatchSize" 
+                                        name="instrumentBatchSize" id = "instrumentBatchSize" 
+                                        #instrumentBatchSize="ngModel" required="true" disabled = "true">
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="form-group">          
+                            <mat-form-field>
+                                <mat-label>Instrument</mat-label>
+                                <mat-select [(ngModel)]="detectionBatch.detectionStatus" 
+                                        name="detectionStatus" id = "detectionStatus" 
+                                        #detectionStatus="ngModel" required="true">
+                                    <mat-option value="" selected></mat-option>
+                                    <mat-option value="Incomplete" selected>Incomplete</mat-option>
+                                    <mat-option value="Unverified" selected>Unverified</mat-option>
+                                    <mat-option value="Complete" selected>Complete</mat-option> 
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div class="detection-specimen">
+                            <div>
+                                <form id="addForm" #saveForm="ngForm" (ngSubmit)="addSpecimen()">
+                                    <mat-form-field>
+                                        <mat-label>Barcode</mat-label>
+                                        <input matInput placeholder="Scan Barcode" [(ngModel)]="barcode" name="barcode" id="barcode">
+                                    </mat-form-field>
+                                    <button type="button" class="btn btn-success" (click)="addSpecimen()">Add</button>
+                                </form>
+                            </div>
+                            <div> 
+                                <table id="batchItems" class="table table-bordered table-striped">
+                                    <thead>
+                                        <th scope="col"></th>
+                                        <th scope="col">Specimen Barcode</th>
+                                        <th scope="col">Patient Name</th>
+                                        <th scope="col">Patient Surname</th>
+                                        <th scope="col">Patient Id</th>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let row of detectionBatch.detectionBatch1.batchItems">
+                                            <td id = "action">
+                                                <div class = "form-group">
+                                                    
+                                                </div>
+                                            </td>
+                                            <td>{{ row.specimen_barcode }}</td>
+                                            <td>{{ row.patient.patient_first_name }}</td>
+                                            <td>{{ row.patient.patient_surname }}</td>
+                                            <td>{{ row.patient.identity_no }}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </form>
@@ -72,7 +145,7 @@
                             <mat-form-field>
                                 <mat-label>Specimen Barcode</mat-label>
                                 <input matInput
-                                    [(ngModel)]="searchCriteria.specimemBarcode" name="searchSpecimenBarcode" 
+                                    [(ngModel)]="searchCriteria.specimenBarcode" name="searchSpecimenBarcode" 
                                     id = "searchSpecimenBarcode" #searchSpecimenBarcode="ngModel"  required="false">
                             </mat-form-field>
                         </div>
@@ -106,7 +179,7 @@
                             <tr *ngFor="let row of batches">
                                 <td id = "action">
                                     <div class = "form-group">
-                                        <button class="btn btn-info" (click)="editBatch(row.batchId)">
+                                        <button class="btn btn-info" (click)="editBatch(row)">
                                             <mat-icon>edit</mat-icon>
                                         </button>
                                     </div>
@@ -121,5 +194,5 @@
                 </div>
             </mat-tab>
         </mat-tab-group>
-    </div>
+</div>
     
