--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -1,1 +1,195 @@
-<p>verification works!</p>
+<div class="component">
+    <mat-tab-group id="detectionGroup" animationDuration="0ms" [selectedIndex]="selectedIndex">
+        <!-- Editing a location -->
+        <mat-tab label="Edit">
+            <div class="col">
+                <form #resultingForm="ngForm" (ngSubmit)="saveResultingBatch()">
+                    
+                    <div class="row">  
+                        <div class="form-group">  
+                            <button class="btn btn-success" [disabled]="resultingForm.invalid">Save</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group">
+                            <mat-form-field>
+                                <mat-label>Batch Id</mat-label>
+                                <input matInput disabled
+                                [(ngModel)]="batch.batchId" name="batchId" id = "batchId" #batchId="ngModel" required="true">
+                            </mat-form-field>
+                        </div>
+                        <div class="form-group">        
+                            <div class="form-group">
+                                <mat-form-field>
+                                    <mat-label>Lab</mat-label>
+                                    <input matInput
+                                    [(ngModel)]="batch.lab.name" name="lab" id = "lab" #lab="ngModel" required="true" disabled="true">
+                                </mat-form-field>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="row">  
+                        <div class="form-group">
+                            <mat-form-field>
+                                <mat-label>Resulting Personnel</mat-label>
+                                <input matInput  disabled = "true"
+                                    [(ngModel)]="batch.resultingPersonnel" 
+                                    name="resultingPersonnel" id = "resultingPersonnel" 
+                                    #resultingPersonnel="ngModel" required="false">
+                            </mat-form-field>
+                        </div>
+                        <div class="form-group">
+                            <mat-form-field>
+                                <mat-label>Resulting Datetime</mat-label>                                
+                                <input matInput disabled = "true"
+                                    [(ngModel)]="batch.resultingDateTime" 
+                                    name="resultingDateTime" id = "resultingDateTime" 
+                                    #resultingDateTime="ngModel" required="true">                                
+                            </mat-form-field>
+                            <button class="btn btn-success" (click)="now()">now</button>
+                        </div>
+                    </div>
+                    <div class="row"> 
+                        <div class="form-group">          
+                            <mat-form-field>
+                                <mat-label>Instrument</mat-label>                             
+                                <input matInput disabled = "true"
+                                    [(ngModel)]="batch.instrument.name" 
+                                    name="instrument" id = "instrument" 
+                                    #instrument="ngModel">
+                            </mat-form-field>
+                        </div>
+                        <div class="form-group">
+                            <mat-form-field>
+                                <mat-label>Batch Size</mat-label>
+                                <input matInput
+                                    [(ngModel)]="batch.instrumentBatchSize" 
+                                    name="instrumentBatchSize" id = "instrumentBatchSize" 
+                                    #instrumentBatchSize="ngModel" required="true" disabled = "true">
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="form-group">          
+                        <mat-form-field>
+                            <mat-label>Resulting Status</mat-label>
+                            <mat-select [(ngModel)]="batch.verificationStatus" 
+                                    name="verificationStatus" id = "verificationStatus" 
+                                    #detectionStatus="ngModel" required="true">
+                                <mat-option value="" selected></mat-option>
+                                <mat-option value="Incomplete" selected>Incomplete</mat-option>
+                                <mat-option value="Unverified" selected>Unverified</mat-option>
+                                <mat-option value="Complete" selected>Complete</mat-option> 
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="specimen-list">
+                        <div> 
+                            <table id="batchItems" class="table table-bordered table-striped">
+                                <thead>
+                                    <th scope="col"></th>
+                                    <th scope="col">Specimen Barcode</th>
+                                    <th scope="col">Patient Name</th>
+                                    <th scope="col">Patient Surname</th>
+                                    <th scope="col">Patient Id</th>
+                                    <th scope="col">Assay Results</th>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let row of batch.batchItems">
+                                        <td id = "action">
+                                            <div class = "form-group">
+                                                
+                                            </div>
+                                        </td>
+                                        <td>{{ row.specimen_barcode }}</td>
+                                        <td>{{ row.patient.patient_first_name }}</td>
+                                        <td>{{ row.patient.patient_surname }}</td>
+                                        <td>{{ row.patient.identity_no }}</td>
+                                        <td>
+                                            <mat-form-field>
+                                                <mat-select [(ngModel)]="row.testAssayResults" 
+                                                        name="testAssayResults" id = "testAssayResults" 
+                                                        #testAssayResults="ngModel" required="true">
+                                                    <mat-option value="" selected></mat-option>
+                                                    <mat-option value="1" selected>Positive</mat-option>
+                                                    <mat-option value="2" selected>Negative</mat-option>
+                                                    <mat-option value="2" selected>Inconclusive</mat-option> 
+                                                    <mat-option value="4" selected>No Results</mat-option> 
+                                                </mat-select>
+                                            </mat-form-field>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </mat-tab>
+
+        <!-- Searching a location -->
+        <mat-tab label="Search">
+            <div class="col-md-12">
+                <form #searchForm="ngForm" (ngSubmit)="searchBatches()">
+                    <div class="form-group">  
+                        <mat-form-field>
+                            <mat-label>Batch Id</mat-label>
+                            <input matInput
+                                [(ngModel)]="searchCriteria.batchId" name="searchBatchId" 
+                                id = "searchBatchId" #searchBatchId="ngModel"  required="false">
+                        </mat-form-field>
+                    </div>
+                    <div class="form-group">  
+                        <mat-form-field>
+                            <mat-label>Specimen Barcode</mat-label>
+                            <input matInput
+                                [(ngModel)]="searchCriteria.specimenBarcode" name="searchSpecimenBarcode" 
+                                id = "searchSpecimenBarcode" #searchSpecimenBarcode="ngModel"  required="false">
+                        </mat-form-field>
+                    </div>
+                    <div class="form-group"> 
+                        <mat-form-field>
+                            <mat-label>Lab</mat-label>
+                            <mat-select [(value)]="searchCriteria.lab">
+                                <mat-option value="None"></mat-option>
+                                <mat-option *ngFor="let location of locations" [value]="location.code">
+                                            {{location.name}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </form>
+            </div>
+            <div class="form-group">  
+                <button class="btn btn-success" (click)="searchBatches()">Search</button>
+                <button type="button" class="btn btn-success" (click)="clearSearch()">Clear</button>
+            </div>
+            <div class="form-group">  
+                <table id="batches" class="table table-bordered table-striped">
+                    <thead>
+                        <th scope="col"></th>
+                        <th scope="col">Batch Id</th>
+                        <th scope="col">Detection Personnel</th>
+                        <th scope="col">Detection Datetime</th>
+                        <th scope="col">Detection Status</th>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let row of batches">
+                            <td id = "action">
+                                <div class = "form-group">
+                                    <button class="btn btn-info" (click)="editBatch(row)">
+                                        <mat-icon>edit</mat-icon>
+                                    </button>
+                                </div>
+                            </td>
+                            <td>{{ row.batchId }}</td>
+                            <td>{{ row.detectionPersonnel }}</td>
+                            <td>{{ row.detectionDateTime }}</td>
+                            <td>{{ row.detectionStatus }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </mat-tab>
+    </mat-tab-group>
+</div>
+
