Added refresh of tokens

--- a/angular/src/app/view/resulting/resulting.component.html
+++ b/angular/src/app/view/resulting/resulting.component.html
@@ -1,4 +1,6 @@
+
 <div class="component"  style="width: 100%;">
+    <h2>Detection</h2>
     <mat-tab-group id="detectionGroup" animationDuration="0ms" [selectedIndex]="selectedIndex">
         <!-- Editing a location -->
         <mat-tab label="Edit">
