--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -76,9 +76,9 @@
                                     name="verificationStatus" id = "verificationStatus" 
                                     #detectionStatus="ngModel" required="true">
                                 <mat-option value="" selected></mat-option>
-                                <mat-option value="Incomplete" selected>Incomplete</mat-option>
-                                <mat-option value="Unverified" selected>Unverified</mat-option>
-                                <mat-option value="Complete" selected>Complete</mat-option> 
+                                <mat-option value="0" selected>Incomplete</mat-option>
+                                <mat-option value="1" selected>Unverified</mat-option>
+                                <mat-option value="2" selected>Complete</mat-option> 
                             </mat-select>
                         </mat-form-field>
                     </div>
