--- a/angular/src/app/view/testing-detection/testing-detection.component.html
+++ b/angular/src/app/view/testing-detection/testing-detection.component.html
@@ -86,9 +86,9 @@
                                         name="detectionStatus" id = "detectionStatus" 
                                         #detectionStatus="ngModel" required="true">
                                     <mat-option value="" selected></mat-option>
-                                    <mat-option value="Incomplete" selected>Incomplete</mat-option>
-                                    <mat-option value="Unverified" selected>Unverified</mat-option>
-                                    <mat-option value="Complete" selected>Complete</mat-option> 
+                                    <mat-option value="0" selected>Incomplete</mat-option>
+                                    <mat-option value="1" selected>Unverified</mat-option>
+                                    <mat-option value="2" selected>Complete</mat-option> 
                                 </mat-select>
                             </mat-form-field>
                         </div>
@@ -105,7 +105,7 @@
                             <div class="mat-elevation-z8 specimen-list"> 
                                 <mat-table [dataSource]="specimen" class="table table-bordered table-striped" style="width: 100%;">
                                     <ng-container matColumnDef="position">
-                                        <mat-header-cell *matHeaderCellDef>POsition</mat-header-cell>
+                                        <mat-header-cell *matHeaderCellDef>Position</mat-header-cell>
                                         <mat-cell *matCellDef="let row"> {{ row.position }} </mat-cell>
                                     </ng-container>
                                     <ng-container matColumnDef="specimen_barcode">
