--- a/angular/src/app/view/testing-detection/testing-detection.component.html
+++ b/angular/src/app/view/testing-detection/testing-detection.component.html
@@ -54,7 +54,7 @@
                                         name="detectionDateTime" id = "detectionDateTime" 
                                         #detectionDateTime="ngModel" required="true">                                
                                 </mat-form-field>
-                                <button class="btn btn-success" (click)="now()">Now</button>
+                                <button (click)="now()">Now</button>
                             </div>
                         </div>
                         <div class="row"> 
