--- a/angular/src/app/view/resulting/resulting.component.html
+++ b/angular/src/app/view/resulting/resulting.component.html
@@ -54,11 +54,13 @@
                     <div class="row"> 
                         <div class="form-group">          
                             <mat-form-field>
-                                <mat-label>Instrument</mat-label>                             
-                                <input matInput disabled = "true"
-                                    [(ngModel)]="batch.instrument.name" 
-                                    name="instrument" id = "instrument" 
-                                    #instrument="ngModel">
+                                <mat-label>Instrument</mat-label>    
+                                <mat-select [formControl]="instrumentControl" disabled="true">
+                                    <mat-option value="new Instrument('', '')" selected></mat-option>  
+                                    <mat-option *ngFor="let instrument of instruments" [value]="instrument.code">
+                                        {{ instrument.name }}
+                                    </mat-option>
+                                </mat-select>    
                             </mat-form-field>
                         </div>
                         <div class="form-group">
@@ -74,8 +76,8 @@
                     <div class="form-group">          
                         <mat-form-field>
                             <mat-label>Resulting Status</mat-label>
-                            <mat-select [(ngModel)]="batch.verificationStatus" 
-                                    name="verificationStatus" id = "verificationStatus" 
+                            <mat-select [(ngModel)]="batch.detectionStatus" 
+                                    name="detectionStatus" id = "detectionStatus" 
                                     #detectionStatus="ngModel" required="true">
                                 <mat-option value=""></mat-option>
                                 <mat-option value="0" selected>Incomplete</mat-option>
